[package]
name = "rook_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.5"
instant = "0.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# env_logger = "0.11.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
quad-rand = { version = "0.2", features = ["rand"] }

[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]
